# JPO_PROJECT

./: CMakeLists copy.txt  CMakeLists.txt  main.cpp  test.txt
.vscode copy/: settings.json
ImGui/: csv_file.cpp  csv_file.hpp  default_file.hpp  file.cpp  file_factory.cpp  image.h  imgui_widgets.cpp  text_file.cpp  text_file.hpp
PROJECT/: CMakeLists.txt  main.cpp
PROJECT/ImGui/: default_file.cpp  file.hpp
PROJECT/tests/: CMakeLists.txt  test_main.cpp  tests.cpp
PROJECT/tests/sample_files/: text.txt
PROJECT/tests/sample_files/fold2/: test.csv
PROJECT/tests/sample_files/fold3/fold2/: imgui.ini
lib/files/: code_file.hpp  css_file.cpp  css_file.hpp  csv_file.cpp  csv_file.hpp  file.cpp  file.hpp  file_factory.cpp  html_file.cpp  html_file.hpp  text_file.cpp  text_file.hpp  tsv_file.cpp  tsv_file.hpp
test_files/: test.csv  test.txt
